fix overflow issues in full screen dialog

--- a/app/src/scss/global.scss
+++ b/app/src/scss/global.scss
@@ -33,3 +33,11 @@
 .md-body > :first-child {
     margin-top: 0px !important;
 }
+
+.v-dialog--fullscreen {
+  overflow: hidden;
+  .scrollContainer {
+    overflow-y: auto;
+    height: 100%;
+  }
+}
